S: Alignment corrected

--- a/frontend/src/Components/Counter/Counter.css
+++ b/frontend/src/Components/Counter/Counter.css
@@ -1,6 +1,7 @@
 body {
     
     margin-top: 20;
+    overflow: hidden;
    
 }
 .Main{
@@ -12,7 +13,7 @@ body {
 /* Gray · 10% */
 
 margin-top: 20px;
-margin-left: 30px;
+margin-left: 300px;
 padding-top: 10px;
 background: #F7F9FA;
 border-radius: 16px;
@@ -111,7 +112,7 @@ color: #855CF8;
 
 .totalNo{
     
-    margin-left: 140px;       
+    margin-left: 400px;       
     margin-top: 20px;
     margin-bottom:50px;
     margin-right:40px;
